# clandestine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: c-cpp.yml
docs/ircd/: CMakeLists.txt  clandestine.conf  vars.conf
docs/ircd/conf/: CMakeLists.txt  clandestine.conf  links.conf
docs/ircd/conf/include/: abbreviation.conf  admin.conf  allowinvite.conf  anticaps.conf  antirandom.conf  antisnoop.conf  asn.conf  autodrop.conf  autoop.conf  bad.conf  banexception.conf  banredirect.conf  blockamsg.conf  blockcaps.conf  blockhighlight.conf  censor.conf  chanfilter.conf  chanhistory.conf  chanlog.conf  checkbans.conf  chghost.conf  class.conf  classban.conf  clientcheck.conf  cloaking.conf  clones.conf  commonchans.conf  conn_accounts.conf  conn_join_geoip.conf  conn_join_ident.conf  conn_matchident.conf  conn_require.conf  conn_strictsasl.conf  conn_vhost.conf  conn_waitpong.conf  connect.conf  connectban.conf  customprefix.conf  cycle.conf  dnsbl.conf  (+81 more)
docs/ircd/include/: admin.conf  alias.conf  alltime.conf  argon2.conf  auditorium.conf  autoaway.conf  autokick.conf  bannegate.conf  bcrypt.conf  blockcolor.conf  blockinvite.conf  botmode.conf  callerid.conf  cap.conf  cban.conf  cgiirc.conf  chancreate.conf  changecap.conf  channames.conf  channelban.conf  channels.conf  check.conf  chgident.conf  chgname.conf  clearchan.conf  cloaking.conf  close.conf  codepage.conf  conn_banner.conf  conn_join.conf  conn_umodes.conf  connflood.conf  custompenalty.conf  customtags.conf  customtitle.conf  dccallow.conf  dccblock.conf  deaf.conf  defaulttopic.conf  delayjoin.conf  (+118 more)
ircd/include/: config.h
ircd/src/: CMakeLists.txt  inspircd.cpp
ircd/src/coremods/: CMakeLists.txt
ircd/src/coremods/core_channel/: CMakeLists.txt
ircd/src/coremods/core_info/: CMakeLists.txt
ircd/src/coremods/core_oper/: CMakeLists.txt
ircd/src/coremods/core_user/: CMakeLists.txt
ircd/src/coremods/core_xline/: CMakeLists.txt
ircd/src/modules/: CMakeLists.txt
ircd/src/modules/extra/: CMakeLists.txt
ircd/src/modules/m_spanningtree/: CMakeLists.txt
ircd/src/socketengines/: CMakeLists.txt
ircd/src/threadengines/: CMakeLists.txt
lib/tre/: CMakeLists.txt
servicesd/modules/: CMakeLists.txt
servicesd/modules/commands/: CMakeLists.txt
servicesd/modules/database/: CMakeLists.txt
servicesd/modules/encryption/: CMakeLists.txt
servicesd/modules/extra/: CMakeLists.txt
servicesd/modules/extra/stats/: CMakeLists.txt
servicesd/modules/protocol/: CMakeLists.txt
servicesd/modules/pseudoclients/: CMakeLists.txt
servicesd/modules/webcpanel/: CMakeLists.txt  static_fileserver.cpp  static_fileserver.h  template_fileserver.cpp  template_fileserver.h  webcpanel.cpp  webcpanel.h
servicesd/modules/webcpanel/pages/: CMakeLists.txt  confirm.cpp  confirm.h  index.cpp  index.h  logout.cpp  logout.h  register.cpp  register.h
servicesd/modules/webcpanel/pages/chanserv/: CMakeLists.txt  access.cpp  access.h  akick.cpp  akick.h  drop.cpp  drop.h  info.cpp  info.h  modes.cpp  modes.h  set.cpp  set.h  utils.cpp  utils.h
servicesd/modules/webcpanel/pages/hostserv/: CMakeLists.txt  request.cpp  request.h
servicesd/modules/webcpanel/pages/memoserv/: CMakeLists.txt  memos.cpp  memos.h
servicesd/modules/webcpanel/pages/nickserv/: CMakeLists.txt  access.cpp  access.h  alist.cpp  alist.h  cert.cpp  cert.h  confirm.cpp  confirm.h  info.cpp  info.h
servicesd/modules/webcpanel/pages/operserv/: CMakeLists.txt  akill.cpp  akill.h
servicesd/src/: CMakeLists.txt
servicesd/src/socketengines/: CMakeLists.txt
