cmake_minimum_required(VERSION 3.18.4)

project(clandestine)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
list(APPEND CMAKE_PREFIX_PATH ${CMAKE_BINARY_DIR})

set(CMAKE_CXX_STANDARD 11)
set(PROJECT_VERSION "clandestine-IRCd-3.15.0")
set(CMAKE_BUILD_TYPE Release)

set(VERSION_MAJOR 3)
set(VERSION_MINOR 15)
set(VERSION_PATCH 0)
set(VERSION_EXTRA "none")
set(BUILD 0)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

find_package(utf8cpp REQUIRED)
find_package(openldap)
find_package(http_parser)
find_package(argon2)
find_package(libxcrypt)
find_package(pcre)
find_package(hash-library)
find_package(maxminddb)
find_package(gnutls)
find_package(mariadb-connector-c)
find_package(libqrencode)
find_package(re2)
find_package(pcre2)
find_package(postgresql)
#find_package(mbedtls)
find_package(openssl)
find_package(sqlite3)

add_subdirectory(lib/tre)
add_subdirectory(ircd/src/)
add_subdirectory(ircd/src/coremods/)
add_subdirectory(ircd/src/modules/)
add_subdirectory(servicesd/src)
add_subdirectory(servicesd/modules)
